--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         Matt and James are trying some hootch.
+        <div id="app"></div>
     </body>
     <script src="dist/bundle.js" charset="utf-8"></script>
 </html>
