react comp added and server added

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,5 @@
         Matt and James are trying some hootch.
         <div id="app"></div>
     </body>
-    <script src="dist/bundle.js" charset="utf-8"></script>
+    <script src="/bundle.js" charset="utf-8"></script>
 </html>
