--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Sample App</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="app" class="container-fluid"></div>
     </body>
     <script src="/bundle.js" charset="utf-8"></script>
 </html>
